[tool.poetry]
name = "jinja2-experiments"
version = "0.1.0"
description = ""
authors = ["Takahiro Yano <speg03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
isort = "^4.3"
yapf = "^0.27.0"
jedi = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
