[tool.poetry]
name = "til-pytest"
version = "0.1.0"
description = ""
authors = ["Takahiro Yano <speg03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
flake8 = "^3.7"
isort = "^4.3"
black = "~19.3b0"
jedi = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
