[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_speg03"
version = "0.0.1"
authors = [
  { name = "Takahiro Yano", email = "speg03@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/speg03/til"
"Bug Tracker" = "https://github.com/speg03/til/issues"
