[tool.poetry]
name = "versioning"
version = "0.0.0"
description = ""
authors = ["Takahiro Yano <speg03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry-version-plugin]
source = "git-tag"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
